deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ceevee-service
  namespace: ceevee
  labels:
    app: ceevee
spec:
  selector:
    app: ceevee
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
